@@ -265,6 +265,7 @@ private:
 	PYFUNCDEF_S(sImport);
 	PYFUNCDEF_S(sSave);
 	PYFUNCDEF_S(sSaveAs);
+	PYFUNCDEF_S(sActiveDocument);
 	PYFUNCDEF_S(sDocument);
 	PYFUNCDEF_S(sGetParam);
 	PYFUNCDEF_S(sGetVersion);
